@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.28) stable; urgency=medium
+
+  * Support self Message-ID when no other is indicated
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 28 Jul 2025 11:01:00 +0200
+
+
 django_codenerix_email (4.0.27) stable; urgency=medium
 
   * Support for manage.py command "test_email" which now support extra arguments to improve testing
